fixed bug where footer text was too big

--- a/resources/sass/default-layout.scss
+++ b/resources/sass/default-layout.scss
@@ -20,6 +20,7 @@
 
 #footer
 {
+        font-size: min(1rem, 2.9vw);
         position: relative;
         
         padding-top: 2rem;
